# dynoclaw

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README-MEMORY-MCP.md  README.md  package-lock.json  package.json  pyproject.toml  setup-memory-mcp.sh  vercel.json
.claude/commands/: recall.md  remember.md
DOCUMENTATION/: ARCHITECTURE.md  DESIGN_DECISIONS.md  PRODUCT_ROADMAP.md  README.md  SYSTEM_DESIGN.md  linkedin-article-v4.md
DOCUMENTATION/diagrams/: architecture.md  erd.md  sequences.md
agents/growth/: SOUL.md
agents/shared/: BRAND-VOICE.md  PRODUCTS.md
convex/: README.md  actionQueue.ts  admin.ts  agentMemory.ts  apiKeyRegistry.ts  auth.config.ts  cmsPages.ts  costActions.ts  costs.ts  crons.ts  deployJobs.ts  deployments.ts  http.ts  inboxScans.ts  jobSearch.ts  knowledge.ts  knowledgeActions.ts  marketingImages.ts  media.ts  mediaActions.ts  navLinks.ts  pluginConfigs.ts  pricingPlans.ts  privacyRequests.ts  privacyViolations.ts  schema.ts  serviceOrders.ts  skillConfigs.ts  subscriptions.ts  users.ts  webinarLeads.ts  webinarSlides.ts
convex/_generated/: api.d.ts
convex/lib/: auth.ts  embeddings.ts
docs/: architecture-overview.md  maio-alignment-analysis.md
docs/diagrams/: dynoclaw-architecture.excalidraw
infra/gcp/: deploy-openclaw.sh  deploy.sh  openclaw-config.jsonc  openclaw.Dockerfile  setup-growth-agent.sh  startup.sh  workflow.yaml
plugins/agentmail/: index.ts  openclaw.plugin.json  package.json
plugins/beehiiv/: package.json
plugins/carousel-gen/: index.ts  (+2 more)
shared/: config.py  logging.py  policy.py
tests/: test_policy.py
(+140 files in other folders)
